Fix: header-message overlaps arrow

--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,7 @@
 	background-color: #111;
 	width: 100%;
 	height: 100vh;
-	padding-top: 4rem;
+	padding: 4rem 0 2rem;
 }
 
 #header-msg{
